added footlocker 1-6 pages and nike, able to parse through nike

--- a/CS5661 project.ipynb
+++ b/CS5661 project.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
    ],
    "source": [
     "#my url\n",
-    "url = './wsspg1.html'\n",
+    "url = './wssp.html'\n",
     "\n",
     "file = open(url, 'r')\n",
     "#getting the page with the url\n",
@@ -1888,10 +1888,6 @@
     "soup = BeautifulSoup(file, 'html.parser')\n",
     "\n",
     "a_tags_pi = soup.find_all('a', class_ = 'pi-link')\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "data = []\n",
     "img_lazy = soup.find_all('img', class_='pi-img lazy')\n",
     "\n",
@@ -1907,12 +1903,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1364\n"
+     ]
+    }
+   ],
+   "source": [
+    "#my url\n",
+    "url = './nike.html'\n",
+    "\n",
+    "file = open(url, 'r')\n",
+    "#getting the page with the url\n",
+    "# page = requests.get(url)\n",
+    "\n",
+    "#beautiful soup will grab everything\n",
+    "soup = BeautifulSoup(file, 'html.parser')\n",
+    "img_lazy = soup.find_all('div', class_='grid-item-image-wrapper sprite-sheet sprite-index-0')\n",
+    "\n",
+    "for i in img_lazy:\n",
+    "#     print(i)\n",
+    "#     print('\\n')\n",
+    "    data.append(i.find('img').get('src'))\n",
+    "print(len(data))"
+   ]
   },
   {
    "cell_type": "code",
